--- a/frontend/src/components/searchBar/SearchBar.scss
+++ b/frontend/src/components/searchBar/SearchBar.scss
@@ -7,7 +7,7 @@ nav#header-container{
     z-index: 1000; 
     padding: 10px;
     box-sizing: border-box;
-
+    
     div{
         background-color: #fff;
         width: 100%;
@@ -18,6 +18,11 @@ nav#header-container{
         align-items: center;
         box-sizing: border-box;
         border-radius: 20px;
+
+        #icon-user{
+            display: grid;
+            place-items: center;
+        }
     }
     
     input{
