--- a/frontend/src/pages/admin/forms/Form.scss
+++ b/frontend/src/pages/admin/forms/Form.scss
@@ -1,14 +1,15 @@
+@import '/src/global.scss';
+
 main.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
+  @include flex-items(column);
+  width: 100vw;
+  min-height: 100vh;
   form {
-    width: 400px;
+    width: 90%;
 
     h2 {
       text-align: center;
-      margin-bottom: 40px;
+      font-size: 40px;
     }
   }
 }
