--- a/frontend/src/components/profileBar/ProfileBar.scss
+++ b/frontend/src/components/profileBar/ProfileBar.scss
@@ -5,10 +5,15 @@
 
     background-color: $secondary;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 100px;
     z-index: 1000;
     position: fixed;
+
+    .container-info-profile-name {
+        display: flex;
+        gap: 5px;
+    }
 
     div {
         background-color: #fff;
