--- a/frontend/src/components/adminComponents/workerCard/WorkerCard.scss
+++ b/frontend/src/components/adminComponents/workerCard/WorkerCard.scss
@@ -1,28 +1,45 @@
 @import '/src/global.scss';
 
 .worker-card {
-    width: 95%;
+    width: 90%;
     max-width: 380px;
-    @include flex-items(column);
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
 
-    .container-info-worker {
+    .container-info {
         display: flex;
-        justify-content: space-between;
+        gap: 1em;
 
-        .container-img-worker {
-            width: 50%;
-
-            .item-img {
-                width: 100%;
-                object-fit: cover;
-            }
+        .item-img {
+            $size: 100px;
+            width: $size;
+            height: $size - 10px;
+            border-radius: 50%;
+            object-fit: cover;
         }
-
     }
 
     .container-control-worker {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
+        @include flex-items(column);
+
+        a,
+        .btn-edit,
+        .btn-trash {
+            width: 25px;
+            border: 0;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        .btn-edit:active,
+        .btn-trash:active {
+            transform: scale(.8);
+        }
+
     }
 }
