--- a/frontend/src/components/adminComponents/workerContainer/WorkerContainer.scss
+++ b/frontend/src/components/adminComponents/workerContainer/WorkerContainer.scss
@@ -2,7 +2,7 @@
 
 .section-container-worker-cards {
     width: 100%;
-    background-color: $dark-mode-text-text-secondary-1;
+    background-color: #EEEEEE;
     @include flex-items(column);
     gap: 1em;
     padding: 1em 0;
