--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -22,7 +22,6 @@ $text-big-size: 20px;
 $text-subtitle: 22px;
 $text-title: 24px;
 
-
 /* Color styles */
 $accent: #EB5E28;
 $gray: #8C8C8C;
@@ -31,41 +30,33 @@ $secondary: #2B2927;
 $neutral-default-white: #EEEEEE;
 $neutral-default-black: #090909;
 
-$dark-mode-text-text-accent-1: #FF9972;
-$dark-mode-text-text-secondary-1: #B7B7B7;
-$dark-mode-text-text-accent-2: #FCD5C8;
-$dark-mode-text-text-secondary-2: #EEEEEE;
-$dark-mode-borders-and-separators-borders-accent-1: #7D3B24;
-$dark-mode-borders-and-separators-borders-secondary-1: #494949;
-$dark-mode-borders-and-separators-borders-accent-2: #B75939;
-$dark-mode-borders-and-separators-borders-secondary-2: #6B6B6B;
-$dark-mode-interactive-components-interactive-accent-1: #4D2C21;
-$dark-mode-interactive-components-interactive-secondary-1: #383838;
-$dark-mode-interactive-components-interactive-accent-2: #6F301A;
-$dark-mode-interactive-components-interactive-secondary-2: #424242;
-$dark-mode-backgrounds-background-accent-1: #2F2825;
-$dark-mode-backgrounds-background-secondary-1: #292929;
-$dark-mode-backgrounds-background-accent-2: #342A26;
-$dark-mode-backgrounds-background-secondary-2: #303030;
+.dark-mode{
+  $text-1: #EEEEEE;
+  $text-2: #B7B7B7;
+  $text-3: #818181;
+  $text-4: #FF9972;
+  $borders-separators-1: #934930;
+  $borders-separators-2: #555555;
+  $interactive-1: #6F301A;
+  $interactive-2: #424242;
+  $background-1: #292929;
+  $background-2: #303030;
+  $background-3: #383838;
+}
 
-$light-mode-text-text-accent-1: #B42E00;
-$light-mode-text-text-secondary-1: #4E4E4E;
-$light-mode-text-text-accent-2: #582D1E;
-$light-mode-text-text-secondary-2: #202020;
-$light-mode-borders-separators-borders-accent-1: #EEA288;
-$light-mode-borders-separators-borders-accent-2: #D27757;
-$light-mode-borders-separators-borders-secondary-1: #C0C0C0;
-$light-mode-borders-separators-borders-secondary-2: #A1A1A1;
-$light-mode-interactive-components-interactive-accent-1: #EFD5CD;
-$light-mode-interactive-components-interactive-accent-2: #F8B097;
-$light-mode-interactive-components-interactive-secondary-1: #DBDBDB;
-$light-mode-interactive-components-interactive-secondary-2: #C9C9C9;
-$light-mode-backgrounds-background-accent-1: #ECEAE9;
-$light-mode-backgrounds-background-secondary-1: #EAEAEA;
-$light-mode-backgrounds-background-accent-2: #EDE2DE;
-$light-mode-backgrounds-background-secondary-2: #E5E5E5;
-
-
+.light-mode{
+  $text-1: #202020;
+  $text-2: #4E4E4E;
+  $text-3: #6A6A6A;
+  $text-4: #B42E00;
+  $borders-separators-1: #DE9075;
+  $borders-separators-2: #B5B5B5;
+  $interactive-1: #EFD5CD;
+  $interactive-2: #F8B097;
+  $background-1: #EAEAEA;
+  $background-2: #E5E5E5;
+  $background-3: #DBDBDB;
+}
 
 // Defined flexbox style with parametres
 @mixin flex-items($direction: row) {
