Home, section recommended done

--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -3,8 +3,9 @@
 #home-container{
     width: 100%;
     min-height: 100vh;
+    background-color: $dark-mode-background-2;
 }
-div#container-home-page{
+main#content-home{
     width: 100%;
     min-height: 100vh;
 }
