--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -14,13 +14,15 @@ $default-black: #000;
 $primary-font: "Roboto",
 sans-serif;
 
-$text-tiny-size: 12px;
-$text-small-size: 14px;
-$text-medium-size: 18px;
-$text-big-size: 20px;
+$text-tiny-size: 10pt;
+$text-small-size: 12pt;
+$text-medium-small-size: 14pt;
+$text-medium-size: 16pt;
+$text-medium-big-size: 18pt;
+$text-big-size: 20pt;
 
-$text-subtitle: 22px;
-$text-title: 24px;
+$text-subtitle: 22pt;
+$text-title: 24pt;
 
 /* Color styles */
 $accent: #EB5E28;
@@ -30,33 +32,30 @@ $secondary: #2B2927;
 $neutral-default-white: #EEEEEE;
 $neutral-default-black: #090909;
 
-.dark-mode{
-  $text-1: #EEEEEE;
-  $text-2: #B7B7B7;
-  $text-3: #818181;
-  $text-4: #FF9972;
-  $borders-separators-1: #934930;
-  $borders-separators-2: #555555;
-  $interactive-1: #6F301A;
-  $interactive-2: #424242;
-  $background-1: #292929;
-  $background-2: #303030;
-  $background-3: #383838;
-}
+$dark-mode-text-1: #EEEEEE;
+$dark-mode-text-2: #B7B7B7;
+$dark-mode-text-3: #818181;
+$dark-mode-text-4: #FF9972;
+$dark-mode-borders-separators-1: #934930;
+$dark-mode-borders-separators-2: #555555;
+$dark-mode-interactive-1: #6F301A;
+$dark-mode-interactive-2: #424242;
+$dark-mode-background-1: #292929;
+$dark-mode-background-2: #303030;
+$dark-mode-background-3: #383838;
 
-.light-mode{
-  $text-1: #202020;
-  $text-2: #4E4E4E;
-  $text-3: #6A6A6A;
-  $text-4: #B42E00;
-  $borders-separators-1: #DE9075;
-  $borders-separators-2: #B5B5B5;
-  $interactive-1: #EFD5CD;
-  $interactive-2: #F8B097;
-  $background-1: #EAEAEA;
-  $background-2: #E5E5E5;
-  $background-3: #DBDBDB;
-}
+$light-mode-text-1: #202020;
+$light-mode-text-2: #4E4E4E;
+$light-mode-text-3: #6A6A6A;
+$light-mode-text-4: #B42E00;
+$light-mode-borders-separators-1: #DE9075;
+$light-mode-borders-separators-2: #B5B5B5;
+$light-mode-interactive-1: #EFD5CD;
+$light-mode-interactive-2: #F8B097;
+$light-mode-background-1: #EAEAEA;
+$light-mode-background-2: #E5E5E5;
+$light-mode-background-3: #DBDBDB;
+
 
 // Defined flexbox style with parametres
 @mixin flex-items($direction: row) {
