--- a/frontend/src/components/HomeComponents/plateOfTheDayContainer/PlateOfTheDayContainer.scss
+++ b/frontend/src/components/HomeComponents/plateOfTheDayContainer/PlateOfTheDayContainer.scss
@@ -3,19 +3,19 @@
 .container-plate-of-day-cards{
     width: 100%;
     min-height: 244px;
-    background-color: $dark-mode-background-1;
+    background-color: var(--background-1);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 
     .container-title-card-home{
         width: 100%;
-        display: flex;
+        margin: 10px 0;
         .title-card-home{
             margin: 0 10px;
-            font-weight: 600;
-            font-size: $text-big-size;
-            color: $default-white;
+            font-weight: 800;
+            font-size: $font-size-big;
+            color: var(--text-1);
         }
     }
     .container-plate-cards{
