--- a/frontend/src/components/button/button.scss
+++ b/frontend/src/components/button/button.scss
@@ -4,10 +4,10 @@ button.welcome-submit,
 button.welcome {
   background-color: $primary-color;
   color: white;
-  border: 1px solid $default-black;
+  border: 1px solid $neutral-default-black;
   border-radius: 8px;
   padding: 10px;
-  font-size: $text-medium-size;
+  font-size: $font-size-medium;
   margin-bottom: 10px;
   margin-top: 10px;
   cursor: pointer;
