--- a/frontend/src/pages/admin/Admin.scss
+++ b/frontend/src/pages/admin/Admin.scss
@@ -12,6 +12,6 @@ main#admin-home {
 
   details {
     width: 100vw;
-    background-color: $primary-background;
+    background-color: var(--background-1);
   }
 }
