--- a/frontend/src/pages/welcome/Welcome.scss
+++ b/frontend/src/pages/welcome/Welcome.scss
@@ -6,7 +6,7 @@
     gap: 1em;
 
     .img-avatar-welcome * {
-        fill: $default-white-2;
+        fill: $neutral-default-white;
     }
 
     .img-avatar{
