--- a/frontend/src/components/profileBar/ProfileBar.scss
+++ b/frontend/src/components/profileBar/ProfileBar.scss
@@ -3,7 +3,7 @@
 #container-profile-bar {
     @include flex-items(row);
 
-    background-color: $secondary;
+    background-color: var(--background-1);
     top: 0;
     width: 100%;
     height: 100px;
@@ -16,7 +16,7 @@
     }
 
     div {
-        background-color: #fff;
+        background-color: $neutral-default-white;
         width: 100%;
         border-radius: 10px;
         height: 2.5rem;
@@ -36,7 +36,7 @@
         background-color: transparent;
         border: none;
         height: 100%;
-        font-size: 1.2rem;
+        font-size: $font-size-medium-small;
         width: 100%;
         margin-left: 5px;
     }
