--- a/frontend/src/components/tabsBar/TabsBar.scss
+++ b/frontend/src/components/tabsBar/TabsBar.scss
@@ -36,7 +36,7 @@ nav#footer-container {
             }
 
             p {
-                font-size: $text-small-size;
+                font-size: $font-size-small;
             }
         }
     }
