--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -1,60 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-$primary-color: #EB5E28;
-$secondary-color: #2B2927;
-
-$primary-background: #CCC5B9;
-$secondary-background: #8C8C8C;
-
-$default-white: #fff;
-$default-white-2: #E3E3E3;
-
-$default-black: #000;
-
 $primary-font: "Roboto",
 sans-serif;
 
-$text-tiny-size: 10pt;
-$text-small-size: 12pt;
-$text-medium-small-size: 14pt;
-$text-medium-size: 16pt;
-$text-medium-big-size: 18pt;
-$text-big-size: 20pt;
+$font-size-tiny: 10pt;
+$font-size-small: 12pt;
+$font-size-medium-small: 14pt;
+$font-size-medium: 16pt;
+$font-size-medium-big: 18pt;
+$font-size-big: 20pt;
 
-$text-subtitle: 22pt;
-$text-title: 24pt;
+$font-size-subtitle: 22pt;
+$font-size-title: 24pt;
 
-/* Color styles */
-$accent: #EB5E28;
-$gray: #8C8C8C;
-$secondary: #2B2927;
+$primary-color: #EB5E28;
+$secondary-color: #2B2927;
+$third-color: #8C8C8C;
 
 $neutral-default-white: #EEEEEE;
 $neutral-default-black: #090909;
 
-$dark-mode-text-1: #EEEEEE;
-$dark-mode-text-2: #B7B7B7;
-$dark-mode-text-3: #818181;
-$dark-mode-text-4: #FF9972;
-$dark-mode-borders-separators-1: #934930;
-$dark-mode-borders-separators-2: #555555;
-$dark-mode-interactive-1: #6F301A;
-$dark-mode-interactive-2: #424242;
-$dark-mode-background-1: #292929;
-$dark-mode-background-2: #303030;
-$dark-mode-background-3: #383838;
+[data-theme='dark'] {
+  --text-1: #EEEEEE;
+  --text-2: #B7B7B7;
+  --text-3: #818181;
+  --text-4: #FF9972;
+  --borders-separators-1: #934930;
+  --borders-separators-2: #555555;
+  --interactive-1: #6F301A;
+  --interactive-2: #424242;
+  --background-1: #292929;
+  --background-2: #303030;
+  --background-3: #383838;
+}
 
-$light-mode-text-1: #202020;
-$light-mode-text-2: #4E4E4E;
-$light-mode-text-3: #6A6A6A;
-$light-mode-text-4: #B42E00;
-$light-mode-borders-separators-1: #DE9075;
-$light-mode-borders-separators-2: #B5B5B5;
-$light-mode-interactive-1: #EFD5CD;
-$light-mode-interactive-2: #F8B097;
-$light-mode-background-1: #EAEAEA;
-$light-mode-background-2: #E5E5E5;
-$light-mode-background-3: #DBDBDB;
+[data-theme='light'] {
+  --text-1: #202020;
+  --text-2: #4E4E4E;
+  --text-3: #6A6A6A;
+  --text-4: #B42E00;
+  --borders-separators-1: #DE9075;
+  --borders-separators-2: #B5B5B5;
+  --interactive-1: #EFD5CD;
+  --interactive-2: #F8B097;
+  --background-1: #d3d3d3;
+  --background-2: #dbdbdb;
+  --background-3: #e7e7e7;
+}
 
 
 // Defined flexbox style with parametres
@@ -87,7 +79,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: $default-black;
+  color: $neutral-default-black;
 }
 
 @mixin formulario-layout {
