home page with prepared for data and small fixes

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -43,9 +43,9 @@ $neutral-default-black: #090909;
   --borders-separators-2: #B5B5B5;
   --interactive-1: #EFD5CD;
   --interactive-2: #F8B097;
-  --background-1: #d3d3d3;
-  --background-2: #dbdbdb;
-  --background-3: #e7e7e7;
+  --background-1: #e7e7e7;
+  --background-2: #dfdfdf;
+  --background-3: #d3d3d3;
 }
 
 
