--- a/frontend/src/components/HomeComponents/menuContainer/MenuContainer.scss
+++ b/frontend/src/components/HomeComponents/menuContainer/MenuContainer.scss
@@ -3,6 +3,7 @@
 .container-menu-cards {
     width: 100%;
     min-height: 200px;
+    padding-bottom: 10px;
     background-color: var(--background-1);
     display: flex;
     flex-direction: column;
