--- a/frontend/src/components/button/button.scss
+++ b/frontend/src/components/button/button.scss
@@ -3,17 +3,17 @@
 button.welcome-submit,
 button.welcome {
   background-color: $primary-color;
-  color: white;
+  color: $neutral-default-white;
   border: 1px solid $neutral-default-black;
   border-radius: 8px;
   padding: 10px;
-  font-size: $font-size-medium;
   margin-bottom: 10px;
   margin-top: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
   width: 100%;
   font-weight: 600;
+  @include flex-items;
 }
 
 button.welcome-submit:hover,
