--- a/frontend/src/components/menuComponents/categoriesContainer/CategoriesContainer.scss
+++ b/frontend/src/components/menuComponents/categoriesContainer/CategoriesContainer.scss
@@ -5,8 +5,9 @@
     display: flex;
     background-color: transparent;
 
-    #category-container-card {
+    main#category-container-card {
         width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
