--- a/frontend/src/pages/orders/Orders.scss
+++ b/frontend/src/pages/orders/Orders.scss
@@ -1,7 +1,17 @@
-main#orders-container{
-  padding: 5% 8%;
-  h1{
-    text-align: center;
-    margin-bottom: 5px;
+@import '/src/global.scss';
+
+#Orders-page {
+  background-color: var(--background-1);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+
+  #orders-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
   }
 }
