fix with orders interactive elements theme

--- a/frontend/src/components/order/Order.scss
+++ b/frontend/src/components/order/Order.scss
@@ -28,7 +28,7 @@
 
     li {
       padding: 5px;
-      background-color: var(--interactive-2);
+      background-color: var(--borders-separators-2);
       display: flex;
       justify-content: space-between;
       width: 80%;
