--- a/frontend/src/components/setttingsComp/Setting.scss
+++ b/frontend/src/components/setttingsComp/Setting.scss
@@ -1,3 +1,5 @@
+@import '/src/global.scss';
+
 div.settings-item {
   display: flex;
   border-top: 1px solid #e0e0e0;
@@ -12,7 +14,7 @@ div.settings-item {
     display: flex;
     gap: 30px;
     justify-content: left;
-    
+
     svg{
       width: 100%;
       height: 100%;
