--- a/frontend/src/pages/settings/studentSettings/StudentSettings.scss
+++ b/frontend/src/pages/settings/studentSettings/StudentSettings.scss
@@ -1,8 +1,13 @@
 @import "/src/global.scss";
 
-main#student-setttings {
+#page-settings-student{
   background-color: var(--background-1);
-  height: 100vh;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr auto 1fr 1fr;
+}
+
+main#student-setttings {
   color: var(--text-2);
 
   // visa settings
