Menu page with react icons

--- a/frontend/src/components/menuComponents/categoriesContainer/CategoriesContainer.scss
+++ b/frontend/src/components/menuComponents/categoriesContainer/CategoriesContainer.scss
@@ -1,8 +1,9 @@
 @import "/src/global.scss";
 
 .category-cards-container {
-    padding-top: 70px;
+    padding-top: 80px;
     display: flex;
+    margin-bottom: 90px;
     background-color: transparent;
 
     main#category-container-card {
