--- a/frontend/src/components/setttingsComp/walletBalance/WalletBalance.scss
+++ b/frontend/src/components/setttingsComp/walletBalance/WalletBalance.scss
@@ -5,6 +5,7 @@
   color: var(--text-2);
   display: flex;
   gap: 20px;
+  width: 100%;
 
   #container-balance {
     @include flex-items(column);
@@ -34,11 +35,10 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      overflow-x: auto;
+      overflow-x: scroll;
       overflow-y: hidden;
       scroll-behavior: smooth;
-      gap: 20px;
-      scrollbar-width: none;
+      gap: 40px;
 
       -ms-overflow-style: none;
       ::-webkit-scrollbar {
@@ -47,6 +47,7 @@
       }
 
       .credit-card {
+        scroll-snap-align: center;
         border-radius: 10px;
         min-width: 280px; // Real Size of a credit Card in inches
         aspect-ratio: 1.586; // Real Aspect Ratio
@@ -67,8 +68,8 @@
       #credit-card-add {
         border: 4px dashed var(--borders-separators-2);
         border-radius: 10px;
-        width: 178px;
-        height: 112px;
+        width: 200px;
+        aspect-ratio: 1.586;
         @include flex-items(column);
         flex-shrink: 0;
 
@@ -82,7 +83,6 @@
 
       }
     }
-
 
     >h2 {
       text-align: center;
