Minor fixes and ready for updata settings account

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -11,8 +11,23 @@ $font-size-medium-big: 18pt;
 $font-size-big: 20pt;
 
 $font-size-subtitle: 22pt;
-$font-size-title: 24pt;
+$font-size-title: 28pt;
 
+// Tamaños predeterminado Figma
+$font-H1: 28pt;
+$font-H2: 22pt;
+
+$font-subtitle-1: 20pt;
+$font-subtitle-2: 18pt;
+
+$font-body-large: 16pt;
+$font-bdoy-small: 14pt;
+
+$font-small: 12pt;
+$font-tiny: 10pt;
+
+
+// Colores
 $primary-color: #EB5E28;
 $secondary-color: #2B2927;
 $third-color: #8C8C8C;
