--- a/frontend/src/components/tabsBar/TabsBar.scss
+++ b/frontend/src/components/tabsBar/TabsBar.scss
@@ -2,8 +2,8 @@
 
 nav#footer-container {
     width: 100%;
-    padding: 10px 0;
-    background-color: $secondary-color;
+    height: 70px;
+    background-color: var(--background-3);
     color: $primary-color;
     position: fixed;
     @include flex-items(row);
@@ -14,29 +14,26 @@ nav#footer-container {
         width: 100%;
         display: flex;
         justify-content: space-around;
+        align-items: center;
     }
 
-    li {
+    li, li a {
         width: 40px;
-        height: 100%;
+        height: 60px;
         text-align: center;
         display: flex;
-        @include flex-items(row);
+        @include flex-items(column);
 
-        a {
-            width: 40px;
-            @include flex-items(column);
-            color: $primary-color;
 
-            .img-tab-icon {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-
-            p {
-                font-size: $font-size-small;
-            }
+        .img-tab-icon {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
+
+        p {
+            font-size: $font-size-small;
+        }
+
     }
 }
