Admin crud done with front

--- a/frontend/src/pages/welcome/Welcome.scss
+++ b/frontend/src/pages/welcome/Welcome.scss
@@ -12,6 +12,10 @@
     .img-avatar{
         color: blue;
     }
+    .welcome-submit:active{
+        transform: translateY(-4px);
+        transition-duration: .3s;
+    }
 
     .register-form-text {
         color: $primary-color;
