--- a/frontend/src/components/searchBar/SearchBar.scss
+++ b/frontend/src/components/searchBar/SearchBar.scss
@@ -24,6 +24,7 @@ nav#header-container{
         #icon-user{
             display: grid;
             place-items: center;
+            font-size: 30px;
         }
     }
     
