--- a/frontend/src/components/tabsBar/TabsBar.scss
+++ b/frontend/src/components/tabsBar/TabsBar.scss
@@ -17,23 +17,43 @@ nav#footer-container {
         align-items: center;
     }
 
-    li, li a {
-        width: 40px;
-        height: 60px;
-        text-align: center;
+    li {
         display: flex;
-        @include flex-items(column);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        text-align: center;
 
+        a {
+            text-decoration: none;
 
-        .img-tab-icon {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            &:hover {
+
+                .img-tab-icon,
+                p {
+                    color: $primary-color;
+                }
+            }
+
+            .img-tab-icon {
+                font-size: 35px;
+                color: $neutral-default-white;
+
+                &.active {
+                    color: $primary-color;
+                }
+            }
+
+            p {
+                font-size: $font-size-small;
+                margin: 0;
+                color: $neutral-default-white;
+
+                &.active {
+                    color: $primary-color;
+                }
+            }
         }
-
-        p {
-            font-size: $font-size-small;
-        }
-
     }
 }
