Product and categories done

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -21,7 +21,7 @@ $font-subtitle-1: 20pt;
 $font-subtitle-2: 18pt;
 
 $font-body-large: 16pt;
-$font-bdoy-small: 14pt;
+$font-body-small: 14pt;
 
 $font-small: 12pt;
 $font-tiny: 10pt;
